Removed confusion between shift and inference shift module changed to inference now
