# src/Swagger/models/IndividualUserPatchResponse.ts
@@ -1,0 +1,57 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Shift
+ * Shift Server API documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface IndividualUserPatchResponse
+ */
+export interface IndividualUserPatchResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof IndividualUserPatchResponse
+     */
+    msg?: string | null;
+}
+
+export function IndividualUserPatchResponseFromJSON(json: any): IndividualUserPatchResponse {
+    return IndividualUserPatchResponseFromJSONTyped(json, false);
+}
+
+export function IndividualUserPatchResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): IndividualUserPatchResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'msg': !exists(json, 'msg') ? undefined : json['msg'],
+    };
+}
+
+export function IndividualUserPatchResponseToJSON(value?: IndividualUserPatchResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'msg': value.msg,
+    };
+}
+
+
