# src/Swagger/models/UpdatePictureResponse.ts
@@ -1,0 +1,57 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Shift
+ * Shift Server API documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface UpdatePictureResponse
+ */
+export interface UpdatePictureResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdatePictureResponse
+     */
+    msg?: string | null;
+}
+
+export function UpdatePictureResponseFromJSON(json: any): UpdatePictureResponse {
+    return UpdatePictureResponseFromJSONTyped(json, false);
+}
+
+export function UpdatePictureResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdatePictureResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'msg': !exists(json, 'msg') ? undefined : json['msg'],
+    };
+}
+
+export function UpdatePictureResponseToJSON(value?: UpdatePictureResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'msg': value.msg,
+    };
+}
+
+
