# src/Swagger/models/index.ts
@@ -3,7 +3,10 @@ export * from './IndividualShiftDeleteResponse';
 export * from './IndividualShiftGetResponse';
 export * from './IndividualShiftPatchRequest';
 export * from './IndividualShiftPatchResponse';
+export * from './IndividualUserDeleteResponse';
 export * from './IndividualUserGetResponse';
+export * from './IndividualUserPatchRequest';
+export * from './IndividualUserPatchResponse';
 export * from './InferenceRequest';
 export * from './InferenceResponse';
 export * from './InferenceStatusReponse';
@@ -22,5 +25,6 @@ export * from './StopTrainResponse';
 export * from './TrainRequest';
 export * from './TrainResponse';
 export * from './TrainStatusResponse';
+export * from './UpdatePictureResponse';
 export * from './User';
 export * from './UserShiftsResponse';
